--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "i-love-my-city",
   "version": "1.0.0",
-  "description": "nodejs-a2. Heroku link: https://node-a2-cities.herokuapp.com/",
+  "description": "nodejs-a2. Heroku link: ",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -25,7 +25,8 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "jade": "1.11.0"
   },
   "devDependencies": {}
 }
